tests/baselines/reference/YieldExpression9_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression9_es6.ts(1,17): error TS1220: Generators are only available when targeting ECMAScript 6 or higher.
tests/cases/conformance/es6/yieldExpressions/YieldExpression9_es6.ts(2,9): error TS2304: Cannot find name 'foo'.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression9_es6.ts (2 errors) ====
    var v = function*() {
                    ~
!!! error TS1220: Generators are only available when targeting ECMAScript 6 or higher.
      yield(foo);
            ~~~
!!! error TS2304: Cannot find name 'foo'.
    }